# balatro-gym

./: .gitignore  LICENSE  README.md  curiculum_learning.py  expert_agent.py  generate_trajectories.py  hpc_train.py  play_by_hand.py  pyproject.toml  robust_training.py  train.sbatch  train_balatro_agent.py  train_balatro_fixed.py  train_progressive.py
balatro_gym/: __init__.py  actions.py  balatro_env.py  balatro_env_2.py  balatro_env_small.py  balatro_env_v2.py  balatro_game.py  balatro_sim.py  balatro_sim_test.py  balatro_small_env.py  balatro_trajectories.json  boss_blinds.py  cards.py  complete_joker_effects.py  constants.py  consumables.py  env.py  jokers.py  patch_balatro_env.py  planets.py  requirements.txt  run_trajectories.py  save_traj.py  score_with_balatro.py  scoring_engine.py  shop.py  trajectory_analysis.py  trajectory_gym.py  unified_scoring.py
balatro_gym/core/: balatro_game.py  cards.py  planets.py  scoring_engine.py  unified_scoring.py
balatro_gym/envs/: balatro_env.py  state.py
balatro_gym/envs/phase_handlers/: __init__.py  blind_select.py  pack_open.py  play_phase.py  shop_phase.py
tests/: chips_test.py  scoring_test.py
