[tool.poetry]
name = "balatro-gym"
version = "0.1.0"
description = "A Gymnasium Environment for Balatro"
authors = ["Cassius Villareal <cassiusfive@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
gymnasium = "^0.29.1"
numpy = "^1.26.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-v"